# cloakscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SPEC.md  README.md  SECURITY.md  Start-CloakGuard.ps1  index.html  package-lock.json  package.json  playwright.config.ts  start-cloakguard.sh  vite.config.ts  vitest.corpus.config.ts
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  linux-package.yml
docs/: architecture.md  desktop.md  detectors.md  linux.md  output-modes.md  press-kit.md
docs/brand/: README.md
e2e/: outputModes.spec.ts  packs.spec.ts  portfolioFlow.spec.ts  portfolioWorkspace.spec.ts  profileEditor.spec.ts  scan.spec.ts  screenshots.spec.ts  settings.spec.ts  viewports.spec.ts
examples/stress-tests/: README.md  it-automation-workflow.ps1  mixed-config-export.txt  names-and-organizations.txt  powershell-identity-and-paths.ps1  sharing-draft-and-custom-terms.md  support-log-and-ticket.txt
scripts/: ensure-deps.mjs  update-manifest.d.mts  update-manifest.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/linux/: dev.benthompson.cloakguard.metainfo.xml  dev.benthompson.cloakscan.metainfo.xml
src-tauri/permissions/autogenerated/: can_self_update.toml  export_clean_text.toml
src-tauri/src/: main.rs
src/components/: AboutView.tsx  CandidatePanel.tsx  CodeView.tsx  ComparisonPanel.tsx  ExportKitPanel.tsx  FindingsPanel.tsx  Header.tsx  PreviewPanel.tsx  PrivateTermsDialog.tsx  ReadinessSummary.tsx  ScanSummary.tsx  ScanView.tsx  ShieldLogo.tsx  SourcePanel.tsx  TermsFeedback.tsx  UpdatePanel.tsx  branding.test.tsx
src/components/settings/: CloakListEditor.tsx  CustomPackEditor.tsx  FormatsSection.tsx  GeneralSection.tsx  PrivacySection.tsx  ProfileEditor.tsx  ProfilesPacksSection.tsx  RulesSection.tsx  SettingsView.tsx
src/hooks/: useHashRoute.ts
src/lib/: candidates.test.ts  candidates.ts  cloakListFile.test.ts  cloakListFile.ts  cloakMappings.test.ts  cloakMappings.ts  codeSafe.test.ts  codeSafe.ts  codeWarnings.test.ts  codeWarnings.ts  comparison.test.ts  comparison.ts  customPacks.ts  customTerms.test.ts  customTerms.ts  decodeText.test.ts  decodeText.ts  demo.ts  desktopConfig.test.ts  download.test.ts  download.ts  groups.ts  importFile.test.ts  importFile.ts  itAutomationFixture.test.ts  mappingSuggestions.test.ts  mappingSuggestions.ts  mask.ts  packs.ts  portfolioExport.test.ts  portfolioExport.ts  powershellStress.test.ts  preferences.test.ts  preferences.ts  profiles.test.ts  profiles.ts  protectedRanges.ts  readiness.test.ts  readiness.ts  redaction.test.ts  (+18 more)
src/lib/detectors/: activedirectory.ts  connections.ts  coverage.test.ts  detectors.test.ts  email.ts  guids.ts  helpers.ts  index.ts  internal.ts  ipv6.ts  nameOrgCorpus.test.ts  network.ts  paths.ts  paymentcards.ts  phase1.test.ts  pii.ts  powershell.test.ts  powershell.ts  privatekeys.ts  regional.test.ts  regional.ts  reviewLeads.test.ts  reviewLeads.ts  secrets.ts  strict.test.ts  strict.ts  structuredNames.ts  tickets.ts  unc.ts  usernames.ts
src/test-fixtures/: powershellStress.ts
tools/: private-corpus.test.ts
