[package]
name = "cloakguard"
version = "0.7.1"
description = "CloakGuard - local-first text sanitizer, desktop shell"
authors = ["Ben Thompson"]
homepage = "https://github.com/benthompsondev/cloakguard"
repository = "https://github.com/benthompsondev/cloakguard"
edition = "2021"
license = "MIT"
publish = false

# The desktop shell is deliberately near-empty. All application logic lives
# in the bundled web frontend. The ONE piece of IPC is export_clean_text:
# WebView2 silently ignores blob-anchor downloads, so saving the cleaned
# output needs a native save dialog + a write to exactly that user-chosen
# path. The dialog plugin is used from Rust only — the frontend has no
# dialog or filesystem permissions.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
