[package]
name = "cloakguard"
version = "1.0.1"
description = "CloakGuard - local-first text sanitizer, desktop shell"
authors = ["Ben Thompson"]
homepage = "https://github.com/benthompsondev/cloakguard"
repository = "https://github.com/benthompsondev/cloakguard"
edition = "2021"
license = "MIT"
publish = false

# The desktop shell is deliberately small. Scanning logic lives in the
# bundled web frontend. The one app-specific IPC command is export_clean_text:
# embedded webviews do not reliably honor blob-anchor downloads, so saving
# the cleaned output needs a native save dialog + a write to exactly that
# user-chosen path. The frontend has no dialog or filesystem permissions.
# The official updater and process plugins are limited by capabilities/main.json.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
