[package]
name = "cloakscan"
version = "1.4.1"
description = "CloakScan - local-first text sanitizer, desktop shell"
authors = ["Ben Thompson"]
homepage = "https://github.com/benthompsondev/cloakscan"
repository = "https://github.com/benthompsondev/cloakscan"
edition = "2021"
license = "MIT"
publish = false

# The desktop shell is deliberately small. Scanning logic lives in the
# bundled web frontend. Two narrow app-specific IPC commands exist:
# export_clean_text opens a native save dialog and writes only to the chosen
# path; can_self_update returns a Boolean so Linux packages can distinguish
# AppImage self-updates from manual .deb updates. The frontend has no general
# dialog, filesystem, environment, URL, or process permissions. The updater,
# process, and opener plugins are limited by capabilities/main.json.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
